--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -87,15 +87,15 @@
 > At a high level of modeling, previous TTS models are usually categorized into two types: auto-regressive (AR) and non-auto-regressive (NAR) models. Generally, NAR-based models outperform AR-based models in terms of generation speed and robustness \cite{fastspeech2}. However, AR-based models exhibit superior diversity, prosody, expressiveness, and flexibility, attributable to their implicit duration modeling and AR sampling strategy \cite{tecatron2}. Furthermore, many NAR-based models \cite{fastspeech2} depend on fine-grained alignment information (phoneme-level duration), which complicates data pre-processing. Although numerous studies \cite{grad-tt,glow-tts,vits} have suggested employing the Monotonic Alignment Search (MAS) strategy to learn alignment information, this approach not only increases training complexity but also results in alignments that may not always be suitable. Most critically, the rigid boundary between phoneme and speech representation can lead to unnatural prosody \cite{seedtss}.
 >
 > Recently, an increasing number of researchers have concentrated on synthesizing diverse and natural speech, particularly focusing on the diversity of speaking styles, achieving human-level naturalness, and zero-shot speaker cloning. To achieve these objectives, they propose utilizing large-scale datasets to train Text-to-Speech (TTS) models \cite{borsos2023audiolm,valle,speartts,uniaudio,make-a-voice}.
-> For example, language model (LM)-based TTS systems, such as VALL-E \cite{valle}, employ a pre-trained audio codec model (Encodec \cite{encodec}) to convert the speech signal into a sequence of discrete tokens. Subsequently, an auto-regressive (AR) language model is trained to predict these speech tokens based on phonemes and speaker prompts. LM-based TTS models streamline data pre-processing, and their structure and training strategies draw from the successes of large language models in natural language processing (NLP) \cite{llama2,gpt4}. Moreover, these models are capable of generating expressive and diverse speech, thanks to their implicit duration modeling and sampling strategy. However, they suffer from slow and unstable generation due to the nature of AR sampling. To mitigate these drawbacks, large-scale non-autoregressive (NAR) models \cite{soundstorm,ns2,voicebox,megatts} have been proposed, such as NaturalSpeech 2/3. Although NAR-based large-scale TTS models exhibit higher inference speeds and enhanced stability, they require extra effort in data pre-processing, such as using their internal alignment tools to secure the alignment between speech and phonemes \cite{ns2,ns3}. Additionally, the persistent issue of hard boundary alignment continues to limit the natural prosody in NAR-based models \cite{seedtss}. We summarize the strengths and potential weaknesses for current AR-based and NAR-based large-scale TTS models in Table \ref{tab1}. We can see that both AR-based and NAR-based large TTS models still have considerable room for improvement in terms of performance, efficiency, or data requirements. Consequently, the primary research question is \textbf{whether we can develop a simple, efficient, and stable TTS system capable of synthesizing diverse, natural, and controllable speech}.
+> For example, language model (LM)-based TTS systems, such as VALL-E \cite{valle}, employ a pre-trained audio codec model (Encodec \cite{encodec}) to convert the speech signal into a sequence of discrete tokens. Subsequently, an auto-regressive (AR) language model is trained to predict these speech tokens based on phonemes and speaker prompts. LM-based TTS models streamline data pre-processing, and their structure and training strategies draw from the successes of large language models in natural language processing (NLP) \cite{llama2,gpt4}. Moreover, these models are capable of generating expressive and diverse speech, thanks to their implicit duration modeling and sampling strategy. However, they suffer from slow and unstable generation due to the nature of AR sampling. To mitigate these drawbacks, large-scale non-autoregressive (NAR) models \cite{soundstorm,ns2,voicebox,megatts} have been proposed, such as NaturalSpeech 2/3. Although NAR-based large-scale TTS models exhibit higher inference speeds and enhanced stability, they require extra effort in data pre-processing, such as using their internal alignment tools to secure the alignment between speech and phonemes \cite{ns2,ns3}. Additionally, the persistent issue of hard boundary alignment continues to limit the natural prosody in NAR-based models \cite{seedtss}. We summarize the strengths and potential weaknesses for current AR-based and NAR-based large-scale TTS models in Table \ref{tab1}. We can see that both AR-based and NAR-based large TTS models still have considerable room for improvement in terms of performance, efficiency, or data requirements. Consequently, the primary research question is **whether we can develop a simple, efficient, and stable TTS system capable of synthesizing diverse, natural, and controllable speech**.
 >
-> Considering the complexity and long sequence of the speech signal, most large TTS models use a speech tokenizer \footnote{In this study, we refer to the intermediate representation extractor as a speech tokenizer. In the audio field, the speech tokenizer can be a codec model or Variational Auto Encoder (VAE).} to extract the intermediate representation from speech, \textit{e.g.} discrete tokens of audio codec model \cite{valle,uniaudio} or continuous embeddings from VAE models \cite{ns2}, then applying generative models on the intermediate representation. However, previous models pay more attention to improving the performance of TTS systems by scaling the training data and model size. The research about the influence of speech tokenizers on the TTS models is scarce. In other words, previous works tell us how to utilize a pre-trained speech tokenizer for large TTS systems, but do not disclose what is the most suitable speech tokenizer for TTS systems. We think the speech tokenizer is a key point for the success of large TTS models. Thus, the second research problem is \textbf{what is a good speech tokenizer for large TTS models}. In this study, we propose to focus on two aspects of the speech tokenizer: 
+> Considering the complexity and long sequence of the speech signal, most large TTS models use a speech tokenizer \footnote{In this study, we refer to the intermediate representation extractor as a speech tokenizer. In the audio field, the speech tokenizer can be a codec model or Variational Auto Encoder (VAE).} to extract the intermediate representation from speech, \textit{e.g.} discrete tokens of audio codec model \cite{valle,uniaudio} or continuous embeddings from VAE models \cite{ns2}, then applying generative models on the intermediate representation. However, previous models pay more attention to improving the performance of TTS systems by scaling the training data and model size. The research about the influence of speech tokenizers on the TTS models is scarce. In other words, previous works tell us how to utilize a pre-trained speech tokenizer for large TTS systems, but do not disclose what is the most suitable speech tokenizer for TTS systems. We think the speech tokenizer is a key point for the success of large TTS models. Thus, the second research problem is **what is a good speech tokenizer for large TTS models**. In this study, we propose to focus on two aspects of the speech tokenizer: 
 > - Completeness: The speech tokenizer should recover the compressed speech without loss.
 > - Compactness: The speech tokenizer should encode the speech into fewer parameters or a smaller space.
 >
 > In Section \ref{sub:good tokenizer}, we first give a comprehensive performance comparison for different speech tokenizers, including our proposed SQ-Codec, Encodec, and Variational Auto Encoder (VAE). Then we give a detailed analysis of the influence of completeness and compactness on speech generation. 
 >
-> Large-scale datasets are crucial for the development of advanced Text-to-Speech (TTS) systems \cite{valle,ns2,ns3,uniaudio,voicebox,voicecraft}. While prior studies have demonstrated that large-scale Automatic Speech Recognition (ASR) datasets can be employed to train TTS systems, the details of obtaining text-speech pairs are usually neglected. In this study, we utilize publicly available ASR models (Whisper \cite{whisper}), to generate the transcriptions. However, these transcriptions may be inaccurate and are thus considered noisy labels. The third research question we address is: \textbf{Can a dataset comprising noisy labels effectively train a high-quality TTS system?} In Section \ref{sec:cfc}, we give a theoretical analysis that when a large-scale dataset includes a small number of noisy labels, which is equal to introducing the classifier-free guidance training \cite{cfc} for the model optimization.
+> Large-scale datasets are crucial for the development of advanced Text-to-Speech (TTS) systems \cite{valle,ns2,ns3,uniaudio,voicebox,voicecraft}. While prior studies have demonstrated that large-scale Automatic Speech Recognition (ASR) datasets can be employed to train TTS systems, the details of obtaining text-speech pairs are usually neglected. In this study, we utilize publicly available ASR models (Whisper \cite{whisper}), to generate the transcriptions. However, these transcriptions may be inaccurate and are thus considered noisy labels. The third research question we address is: **Can a dataset comprising noisy labels effectively train a high-quality TTS system?** In Section \ref{sec:cfc}, we give a theoretical analysis that when a large-scale dataset includes a small number of noisy labels, which is equal to introducing the classifier-free guidance training \cite{cfc} for the model optimization.
 >
 > Our contributions can be summarized as follows:
 > - We introduce SimpleSpeech 2, a simple and efficient NAR framework for text-to-speech, building upon our previous work \cite{simplespeech}. This framework effectively combines the advantages of current AR-based and NAR-based models. 
@@ -127,6 +127,153 @@
 > Diffusion models \cite{ho2020denoising, sohl2015deep} have demonstrated great performance on a variety of generation tasks, including image \cite{ldm} and audio generation \cite{diffsound,make-an-audio,diffwave}. Many previous TTS systems that use diffusion models have been shown to produce high-fidelity speech that is comparable with state-of-the-art systems \cite{norespeech,wavegrad2,ns2,diffvoice,e3tts}. However, most of the previous diffusion-based TTS models rely on an additional duration modeling unit \cite{ns2,diffvoice} or carefully designed architecture \cite{e3tts}. In this study, we follow our previous publication, SimpleSpeech \cite{simplespeech}, to design a simple transformer-based diffusion model to generate speech without any alignment module. 
 
 ## 3.Methodology: 方法
+
+> In this part, we present the details of the proposed SimpleSpeech 2. 
+> The overall architecture of the SimpleSpeech 2 framework is demonstrated in Figure 1, which includes three parts: (1) off-the-shelf pre-trained text and speaker encoders to encode the text and speaker prompt without relying on speech domain-specific modeling, such as phoneme and duration; (2) A pre-trained high-quality audio tokenizer; (3) A LLAMA-style flow-based diffusion transformer. In the following, we first introduce the text encoder, speaker encoder, and SQ-Codec, and then give the details of flow-based scalar latent transformer diffusion models. 
+
+### 3.1.Text Encoder
+
+> This work explores to use the large-scale speech-only datasets to train a TTS system. Previous works use high-quality text-speech pair or their internal annotation tools to obtain text transcriptions, making TTS more complicated to implement. In this study, we propose to use the open available ASR ( Whisper-base model \cite{whisper}) model to get transcripts. Following SimpleSpeech \cite{simplespeech}, we use a pre-trained language model to directly extract the textual representations (\textit{e.g.} ByT5 \cite{btT5}) from text input without relying on speech domain-specific knowledge, such as phoneme.
+
+### 3.2.Speech Attribute Disentanglement Based Speaker Encoder
+
+> Previous works directly extract speaker prompt representation from audio codec \cite{valle}, but such representation includes not only speaker timbre but also other acoustic information, such as recording condition, noise. Thus the synthesized quality is significantly influenced by the speaker prompt. For example, if the speaker prompt includes noise, the quality of synthesized speech will be poor. Inspired by the FACodec \cite{ns3}, which proposes to disentangle speech waveform into subspaces of content, prosody, timbre, and acoustic details, we use the pre-trained FACodec to extract the timbre representation. Specifically, we first use the timbre encoder of FACodec to extract a global embedding. Then we extract a fixed number of style vectors from the prosody encoder by using segment-based average pooling. To better show the prosody variation over time, we first split the prompt speech into three segments, and then we extract 3 style vectors from the prompt. Lastly, we concatenate the timbre and style vectors. 
+
+### 3.3.SQ-Codec
+
+> Recently, residual vector quantization (RVQ) based audio codec models have shown their advantages in audio compression and audio generation. Many audio generation models use an RVQ-based audio codec as the audio tokenizer (\textit{e.g.} extracting discrete tokens), then use a transformer model to predict the discrete tokens. Furthermore, the continuous representations extracted from the encoder of the audio codec can also be used as the training target of latent diffusion models, \textit{e.g.} NaturalSpeech 2 \cite{ns2}. However, current RVQ-based codec models have drawbacks: (1) training a good RVQ-based codec model needs a lot of tricks and complicated loss design \cite{dac}; (2) the reconstruction performance is positively correlated with codebook number, but too many codebooks also bring burden for LM-based model; (3) The distribution of continuous representations extracted from the encoder of audio codec is complex and infinite, which also increases the modeling difficulty of diffusion models.  In this study, we follow SimpleSpeech \cite{simplespeech} to use scalar quantization \cite{balle2016end,mentzer2023finite} to replace the residual vector quantization in audio codec models, which can be trained with the reconstruction loss and adversarial loss without any training tricks. We show that the scalar quantization effectively maps the complex speech signal into a finite and compact latent space, which is suitable for the diffusion model (refer to Section \ref{sub:good tokenizer} for more details). 
+>
+> Similar to RVQ-based audio codec, our SQ-Codec also consists of an encoder, a decoder, and a scalar quantization. For any input speech $\boldsymbol{x}$, the encoder first transfers it as hidden representation, $\boldsymbol{h} \in \mathcal{R}^{T*d}$, where $T$ and $d$ denote the number of frames and the dimension of each vector. Then for any vector $\boldsymbol{h}_i$, we use a parameter-free scalar quantization module to quantize $\boldsymbol{h}_i$ into a fixed scalar space, this operation can be easily completed by following the formula:
+
+$$
+  \boldsymbol{h}_i = \text{Tanh}(\boldsymbol{h}_i), \quad
+  \boldsymbol{s}_i = \text{Round}(\boldsymbol{h}_i*S)/S,
+$$
+
+> where $S$ is a hyper-parameter that determines the scope of scalar space. We discuss the influence of hyper-parameter $S$ for the reconstruction performance and generation performance in Section \ref{sub:good tokenizer}. To get gradients through the rounding operation, we follow a straight-through estimator from VQ-VAE \cite{vqvae}. From formula \ref{codebook}, we can see that the SQ operation first uses a \textit{tanh} activation function to map the value of features into $[-1, 1]$, then it uses a \textit{round} operation to further scale the value of range into $\text{2*S+1}$ different numbers. We named such value domain as \textit{scalar latent space}. We find that previous works \cite{mentzer2023finite,yu2023language} also adopt scalar quantization for the image tokenizer. We claim that our implementation is different from theirs and we have different targets to build the codec: previous work tries to quantize image data into discrete representation, but we want to compress the search space of diffusion models.
+
+### 3.4.Flow-Based Scalar Latent Transformer Diffusion Models
+
+> Previous diffusion-based text-to-speech (TTS) methods typically model the speech data in a continuous space, \textit{e.g.} mel-spectrogram \cite{norespeech}, VAE \cite{diffvoice}, or the encoder output of audio codec \cite{ns2}. With the help of the powerful generative modeling ability of diffusion models, these works obtain good performance. In this study, we propose a new perspective on the modeling target of diffusion models: a compact, complete, and finite space is easier and more suitable for diffusion models. Specifically, we first pre-training a scalar quantization-based audio codec (SQ-Codec), as section \ref{sq-codec} introduced. Then we train a flow-based diffusion model that transfers the noise distribution into the scalar latent space. In the following,  we first give the preliminaries of flow-based diffusion models, and then describe how to use flow-based diffusion models to parameterize the problem.
+
+#### 3.4.1.Flow-based Diffusion Models
+
+> In this study, we adopt a flow-based diffusion model \cite{flow-matching,gao2024lumina} for text-to-speech, which has been shown powerful generative ability in the image and video domain \cite{sd3,gao2024lumina}. Following previous work \cite{gao2024lumina}, we will refer to it as flow matching in the following discussion. flow matching uses a simple strategy to corrupt data: it linearly interpolates between noise and data in a straight line. More specifically, given the representation of speech data $\mathbf{x} \sim p(\mathbf{x})$ and Gaussian noise $\varepsilon \sim \mathcal{N}(0, \mathbf{I})$, an interpolation-based forward process can be defined as:
+
+$$
+ \boldsymbol{x}_t = \alpha_t \boldsymbol{x} + \beta_t \boldsymbol{\epsilon}
+$$
+
+> where $\alpha_0 =0 $, $\beta_0 = 1$, $\alpha_1 = 1 $, $\beta_1 = 0$, and $t \in [0,1]$. Similar to the diffusion schedule, we can set $\alpha_t$ and $\beta_t$ to follow the cosine schedule $\alpha_t = sin(\frac{\pi t}{2}), \beta_t = cos(\frac{\pi t}{2})$ or linear interpolation schedule $\alpha_t = t, \beta_t = (1-t)$. In this study, we adopt the linear interpolation schedule, so formula \ref{flow interpolation1} can be written as:
+
+$$
+ \boldsymbol{x}_t = t \boldsymbol{x} + (1-t) \boldsymbol{\epsilon}
+$$
+
+> where $t \in [0,1]$. This formulation shows a uniform transformation with constant velocity between data and noise.
+> The corresponding time-dependent velocity field can be written as
+
+$$
+\begin{aligned}
+  v_t(x_t) &= \hat{\alpha}_t \boldsymbol{x} + \hat{\beta}_t \boldsymbol{\epsilon} 
+          &= \boldsymbol{x} - \boldsymbol{\epsilon}
+\end{aligned}
+$$
+
+> where $\hat{\alpha}_t$ and $\hat{\beta}_t$ denote time derivative of $\alpha$ and $\beta$. Following \cite{flow-matching,gao2024lumina}, we consider the probability flow ordinary differential equation (ODE) with a velocity field: 
+
+$$
+d \mathbf{x}_t=\mathbf{v}_{\theta}(\mathbf{x}_t, t) d t,
+$$
+
+> where the velocity $\mathbf{v}$ is parameterized by a neural network $\theta$. By solving the probability flow ODE backward in time from $\varepsilon \sim \mathcal{N}(0, \mathbf{I})$, we can generate samples and approximate the ground-truth data distribution $p(x)$. We refer to Eq.~\ref{flow_ode} as a flow-based generative model.
+
+> However, parameterizing $\mathbf{v}_{\theta}(\mathbf{x}_t, t)$ is computationally expensive. Previous works \cite{flow-matching} have shown that estimating a vector field $\mathbf{u}_t$ that generates a probability path between $p_0$ and $p_1$ is equivalent.
+> By solving this flow-based generative model from $t = 0$ to $t = 1$, we can transform noise into a data sample using the approximated velocity fields $\mathbf{v}_{\theta}(\mathbf{x}_t, t)$. During training, the flow-matching objective directly regresses the target velocity
+
+$$
+    \mathcal{L}_{F M} =  \min _\theta \mathbb{E}_{t, p_t(\mathbf{x})}\|\mathbf{v}_\theta(\mathbf{x}, t)- \hat{\alpha}_t \boldsymbol{x} - \hat{\beta}_t \boldsymbol{\epsilon} \|^2,
+$$
+
+> The formula \ref{cfm} is called conditional flow matching loss \cite{flow-matching}, it is similar to the noise prediction or score prediction losses in diffusion models. These properties minimize the trajectory curvature and connect the target data and noise on a straight line. It has been demonstrated that flow probabilistic models~\cite{ma2024sit,liu2022flow,esser2024scaling} can learn diverse data distribution in multiple domains, such as images \cite{gao2024lumina,sd3}. In this work, we compare the flow formulation to existing DDPM \cite{simplespeech} in text-to-speech and demonstrate its benefits. 
+
+> Furthermore, to make sure the final output belongs to the scalar latent space, we propose to use the scalar quantization (SQ) regularization to scale the final prediction.
+
+$$
+   \boldsymbol{\hat{x}} = SQ(\theta(\boldsymbol{\epsilon},T,\boldsymbol{c})) 
+$$
+
+> where $\theta$ denotes the flow-based transformer, $SQ$ denotes the scalar quantization operation in formula (\ref{codebook}). 
+
+#### 3.4.2.Architecture
+
+> As illustrated in figure \ref{fig:dit}, we describe the transformer architecture components in the following part. In previous work \cite{simplespeech}, we use a GPT-2 style \cite{gpt2} backbone. Inspired by the advanced LLMs architecture \cite{llama2}, we propose to build a more advanced transformer backbone for the text-to-speech task. The difference from the following parts: 
+> (1) **Rotary Position Embedding (RoPE)**: RoPE \cite{rope} is used as the positional encoding. RoPE  can encode relative positions, which is more suitable for TTS tasks than Absolute position encoding, \textit{e.g.} generating long speech during the inference. 
+> (2) **RMSNorm**: we substitutes all LayerNorm with RMSNorm to improve training stability \cite{llama2}. Moreover, it incorporates key-query normalization (KQ-Norm) before key-query dot product attention computation. The introduction of KQ-Norm aims to prevent loss divergence by eliminating extremely large values within attention logits. 
+> (3) **Condition strategy**: In SimpleSpeech \cite{simplespeech}, we find that cross attention condition style \cite{ldm}, and in context condition (concatenate the conditional sequence and noisy latent sequence) are both effective. In this study, we follow the in-context condition strategy that join the sequences of the two modalities (condition features and noisy latent sequence) for the self-attention operation, such that both representations can work in their own space yet take the other one into account. 
+> (4) **Time Mixture-Of-Experts**
+> As the previous part introduced, our flow-based diffusion models solve ODE backward in $t \in[0,1]$ and generate samples approximating the scalar latent distribution. We can find that 1) if the timesteps near $0$, the input $\mathbf{x}$ is highly noised, and the network of these steps mainly intends to capture the semantic information from conditional information (i.e., text and timbre information); 2) instead, when timesteps near $1$, the input $\boldsymbol{x}_t$ includes most of semantic information, where the model focus more on refining the details ( \textit{e.g.} improving the speech quality). To enhance the capability of flow-based generative models, following \cite{feng2023ernie}, we divide all the timesteps uniformly into $4$ blocks, in which each block consists of consecutive timesteps and is assigned to one denoising expert. Intuitively, when more experts are used, each block contains fewer timesteps, allowing each expert to better focus on learning the characteristics of the specific denoising steps assigned to it. 
+
+### 3.5.Classifier-Free Guidance
+
+> Classifier-free guidance (CFG) \cite{cfc} has been demonstrated as an effective way to enhance the generation quality in both image and audio domains \cite{sd3,yang2024instructtts}. CFG can be formulated as:
+
+$$
+   \hat{p}(\boldsymbol{x}|\boldsymbol{y}) = p(\boldsymbol{x}) + \gamma (p(\boldsymbol{x}|\boldsymbol{y})-p(\boldsymbol{x}))
+$$
+
+> where $\lambda$ denotes the guidance scale. CFC tries to model conditional distribution $p(\boldsymbol{x}|\boldsymbol{y})$ and unconditional distribution $p(\boldsymbol{x})$ in the training. In the inference stage, $\lambda=1$ denotes that we do not use classifier-free guidance, when $\lambda>1$ the model decreases the unconditional likelihood of the sample while increasing the conditional likelihood. In other words, classifier-free guidance conducts this by decreasing the unconditional likelihood with a negative score term.  During the training stage, previous works try to mask the condition information of some samples (\textit{e.g.} set the training sample's text as empty with 10\% probability), so that these samples can be used to optimize unconditional distribution $p(\boldsymbol{x})$. 
+
+> Many prior studies \cite{valle,voicecraft} demonstrate that text transcriptions generated by an ASR system can be utilized to train a TTS system. Inevitably, the text transcription from the ASR system is not flawless, referred to as noisy or weak labels. Despite this, existing literature does not thoroughly explain why TTS systems can be effectively trained using such dataset. In this study, we show that including a small part of the noisy label in the training set is equivalent to introducing the CFC training strategy, thus we do not need to deliberately construct masked samples during training stage. In the following, we give the proof. 
+
+> Assume the condition is $\boldsymbol{y}$, the target is $\boldsymbol{x}$, and the generative model tries to model $p(\boldsymbol{x}|\boldsymbol{y})$. Consider the text $\boldsymbol{y}$ includes $n$ words, and $\boldsymbol{y}$ can be split into $n$ parts, and we have correspondence ($\boldsymbol{y}_i, \boldsymbol{x}_i$). Given that the TTS task tries to learn the mapping between $\boldsymbol{y}_i and \boldsymbol{x}_i$, $\boldsymbol{y}_i$. In general, we assume  $\boldsymbol{x}_j$ are mutually independent if $i \neq j$. The target of the generative model is to learn the distribution $p_{\theta}(\boldsymbol{x}|\boldsymbol{y})$. Based on Bayes formula, we have:
+
+$$
+   \log p(\boldsymbol{x}|\boldsymbol{y}) = \log p(\boldsymbol{y}|\boldsymbol{x}) + \log p(\boldsymbol{x}) - \log p(\boldsymbol{y})
+$$
+
+> We can discard the last term when we calculate the derivative of $x$.
+
+$$
+   \nabla_x \log p(\boldsymbol{x}|\boldsymbol{y}) = \nabla_x \log p(\boldsymbol{y}|\boldsymbol{x}) + \nabla_x \log p(\boldsymbol{x}) 
+$$
+
+> Based on the independence assumption, we can re-write $p(\boldsymbol{y}|\boldsymbol{x})$ as:
+
+$$
+\begin{aligned}
+    p(\boldsymbol{y}|\boldsymbol{x}) &= p(y_1,y_2, ... y_n | x_1, x_2, ... x_n) 
+    &= \prod_{i=1}^{i=n} p(y_i|x_i)
+\end{aligned}
+$$
+
+> By combining equation \ref{formula:bayes-derivative2} and \ref{formula:bayes-derivative}, we have:
+
+$$
+   \nabla_x \log p(\boldsymbol{x}|\boldsymbol{y}) = \sum_i \nabla_x \log p(y_i|x_i) + \sum_{i} \nabla_x  \log p(x_i) 
+$$
+
+> In a large-scale speech dataset, most of the words will occur many times. In some cases, the given input $y_i$ is not the ground truth label, we have $p(y_i|x_i) \to 0$, thus the first term in formula (\ref{formula:bayes-derivative3}) cannot contribute a positive gradient for our desired optimization process. In an extreme case, we set the text input as empty, so that each term of $p(y_i|x_i)=0$. It becomes an unconditional optimization problem:
+
+$$
+   \nabla_x \log p(\boldsymbol{x}|\boldsymbol{y}) =  \sum_{i} \nabla_x  \log p(x_i) 
+$$
+
+> Note that the traditional CFC training strategy is to randomly choose mask samples during the training process, which means that each correct sample will be used to train the model. Instead, in our noisy label scene, these noisy labels are always wrong. Thus, the model just learns the unconditional distribution when noise labels are in the majority. 
+
+### 3.6.Sentence Duration
+
+> In this study, we propose to use sentence duration to control the generated speech length in the inference stage. In our previous study, we use a sentence duration encoder \cite{simplespeech} to encode the duration information into the model. In this study, we further simply this module, we find that it is not necessary to encode the duration information. The sentence duration is only used to provide a coarse length guidance for the initialization of noisy latent.
+> To obtain the sentence duration, we propose the following potential strategies: 
+> **ByT5 based sentence duration predictor** 
+> We propose to train a sentence duration prediction model with the help of a pre-trained large language model (ByT5 is used). As Figure \ref{fig:duration} (a) shows, we add several learnable attention and linear layers with the fixed ByT5 models, this model is asked to predict the duration. We train the model with MSE loss. 
+> **Get sentence duration by using the context learning ability of ChatGPT** 
+> Following SimpleSpeech \cite{simplespeech}, we can use the in-context learning of ChatGPT to obtain the sentence duration. Specifically, we write a simple prompt for ChatGPT, and ask ChatGPT to predict a coarse sentence duration based on the length and the pronunciation of each words. Considering the ChatGPT is not stable, we call the ChatGPT 5 times for each text, and then get the average duration time. 
+> **Obtaining sentence duration from teacher models** 
+> Previous NAR TTS models \cite{ns2,fastspeech2} has a phoneme duration predictor module, we can easily obtain the duration of each phoneme, and then we can sum them to get the final sentence duration. We use the phoneme duration predictor from open sourced FastSpeech 2 model \footnote{https://github.com/ming024/FastSpeech2}. To increase the diversity, we add a \textit{scale factor} for each phoneme duration, the scale factor is a random value, which belongs to $[0.9, 1.3]$. Note that we only use this module to obtain a coarse sentence duration, which does not introduce additional complexity for our SimpleSpeech 2. 
+> **Training a AR-based duration model** 
+> We can also train a shallow AR-based duration predictor, that predicts the phoneme or word duration in an autoregressive style. In this study, we use the open-sourced phoneme predictor \footnote{https://github.com/ex3ndr/supervoice-gpt} as Fig. \ref{fig:duration} shows. Similarly, such module is used to obtain a coarse sentence duration, it does not introduce additional complexity for SimpleSpeech 2. 
+> In Section \ref{exp:duration}, we give detailed experimental analysis for each way and find that the ByT5-based sentence duration predictor shows the best performance. 
 
 ## 4.Experiments: 实验
 
