--- a/Models/Diffusion/2024.08.25_SimpleSpeech2.md
+++ b/Models/Diffusion/2024.08.25_SimpleSpeech2.md
@@ -277,6 +277,32 @@ $$
 
 ## 4.Experiments: 实验
 
+### 4.1.Dataset
+
+#### Training Data
+
+> In this study, we train two distinct models, SimpleSpeech 2-EN and SimpleSpeech 2-MUL.
+> For SimpleSpeech 2-EN, we create a dataset with only 7k hours of unlabeled English speech data sampled from the Multilingual LibriSpeech (MLS) dataset \cite{mls}. For each original audio, we randomly crop 2-10 seconds if the length is larger than 10 seconds. Although the MLS dataset includes text labels, we opt not to use these in order to explore the potential of a speech-only dataset for TTS development. For all of the speech samples, we re-sampling it into 16k Hz. 
+> Given the predominant focus of previous research on English datasets, we designate SimpleSpeech 2-EN as our primary experiment and benchmark its performance against existing methods.
+>
+> For SimpleSpeech 2-MUL, we enrich the dataset with an additional 4k hours Chinese dataset from WenetSpeech \cite{zhang2022wenetspeech}, which we integrate with the 7k hours English data from MLS. Leveraging the multilingual capabilities of the ByT5 model, we concurrently train on both English and Chinese speech. 
+
+#### Evaluation Data
+
+> Most prior studies train their models on the LibriLight \cite{librilight} or MLS \cite{mls} datasets, and then evaluate performance using the LibriSpeech test set \cite{libritts}. One potential drawback is that both LibriSpeech and LibriLight are sourced from the same LibriVox \cite{kearns2014librivox} audiobooks dataset, which may not fully represent the diversity of real-world audio environments. In this study, we propose to evaluate the model using test sets derived from various other sources. We have constructed a comprehensive test set that includes LibriTTS \cite{libritts}, VCTK, CommonVoice \cite{ardila2019common}, RAVDESS \cite{livingstone2018ryerson}, and SwitchBoard \cite{godfrey1992switchboard}. Both LibriTTS and VCTK are widely used in academic research and offer high-quality speech data. SwitchBoard, being a conversational test set, and RAVDESS, which provides a range of emotional speech samples, can validate the model’s ability to handle conversational dynamics and emotional variance, respectively.
+
+### 4.2.Model Training & Inference
+
+> **SQ-Codec training** 
+> For the SQ-Codec model, we train it on the LibriTTS \cite{zen2019libritts} dataset. The sample rate is set as 16k Hz. Following \cite{simplespeech}, we default use $S=9$ and $d=32$ for all of the experiments. We also train different SQ-Codec models by changing the hyper-parameter $S$ and $d$, refer to Section \ref{sub:good tokenizer} for more details. During the training, we set the learning rate as 2e-3. We used Adam optimizer for all of the experiments. We train the SQ-Codec models with 200k steps.
+>
+> ***SimpleSpeech2* training** 
+> For the SimpleSpeech 2 model training, we freeze the SQ-Codec, text encoder, and speaker encoder. We only update the parameters of the transformer diffusion part. We train it by using Adam optimizer with the learning rate of $1e-4$. We use a cosine learning rate scheduler with a
+warmup of 1K steps. The model is trained with 400k steps. For the transformer, we set 16 attention layers, the hidden size is 768, and the transformer head is 32. 
+> 
+> **Inference** 
+> To synthesize speech, we first input the text into the proposed sentence duration module, which can be used to determine the total length of the predicted speech by controlling the length of the noisy latent sequence. Then we input the text and speaker prompt into the SimpleSpeech 2 to generate the predicted latent of SQ-codec. Lastly, we get the predicted waveform by inputting the predicted latent representation into the SQ-Codec decoder. 
+
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
